boulder/tests/compile_fail/module/import_wrong_mod.bo
# sub module `iner` does not exist
# (8:

mod inner {
    struct A;
}

use iner::A;